--- a/content/themes/ecjia-intro/style.css
+++ b/content/themes/ecjia-intro/style.css
@@ -1,9 +1,9 @@
 /*
-Template Name: ECJia 到家
+Template Name: ECJia到家APP宣传
 Template URI: https://ecjia.com/
-Description: ECJia 到家
-Version: 2.72
-Author: ECJia 到家
+Description: ECJia到家App下载模板
+Version: 1.2
+Author: ECJia Team
 Author URI: https://ecjia.com/
 Logo filename: logo.gif
 */
