--- a/sites/m/content/themes/h5/css/ecjia_city.css
+++ b/sites/m/content/themes/h5/css/ecjia_city.css
@@ -3763,7 +3763,7 @@ footer {
 .ecjia-flow-done .flow-success p {
 	padding-left: 4.5em;
 	width: 15.5em;
-	hieght: 4em;
+	height: 4em;
 	line-height: 4em;
 	margin: 0 auto;
 	position: relative;
@@ -3822,6 +3822,12 @@ footer {
 	padding-left: 40px;
 	height: 1.8em;
 	line-height: 1.8em;
+}
+
+.payment-bottom {
+	border: 0!important;
+	background:#ddd!important;
+	color: black!important;
 }
 
 .ecjia-flow-done .ecjia-list.list-short li+li::before {
@@ -4793,7 +4799,7 @@ footer {
 
 .ecjia-account.ecjia-form .form-group-text {
 	position: relative;
-	height: 3em;
+	height: 3.2em;
 	padding: .7em 1em;
 	border: 1px solid #eee;
 }
