--- a/content/themes/ecjia-pc/css/style.css
+++ b/content/themes/ecjia-pc/css/style.css
@@ -7,9 +7,9 @@ a:active,a:hover{text-decoration:none;color:#47aa4d}
 
 .ecjia-content{width:1200px;margin:0 auto;overflow:hidden}
 .ecjia-header .ecjia-content{overflow:visible;height:80px}
-.ecjia-content .search{height:120px;position:relative}
+.ecjia-content .search{height:80px;position:relative}
 .search input{margin-top:25px;width:220px;height:25px;border-radius:4px 0 0 4px}
-.search button{background:#47aa4d;border:none;width:35px;height:35px;font-size:20px;font-weight:700;color:#fff;margin-top:15px;border-radius:0 4px 4px 0;margin-left:-4px}
+.search button{background:#47aa4d;border:none;width:35px;height:35px;font-size:20px;font-weight:700;color:#fff;margin-top:14px;border-radius:0 4px 4px 0;margin-left:-4px}
 .search i{display:inline-block;width:20px;height:20px;background-image:url(../images/icon_search_white.png);background-repeat:no-repeat;background-size:20px 20px}
 .ecjia-content .search .shelper{position:absolute;z-index:2;width:232px;height:auto;border:1px solid #ccc;top:61px;background:#fff;box-shadow:1px 2px 1px rgba(0,0,0,.2);border-top:none;border-radius:0 0 4px 4px;display:none}
 .ecjia-content .search .shelper .search-item{float:left;width:110px;white-space:nowrap;text-overflow:ellipsis;overflow:hidden}
@@ -95,10 +95,7 @@ a:active,a:hover{text-decoration:none;color:#47aa4d}
 .ecjia-category-nav .category-info .ecjia-category-info-l1:hover .ecjia-category-l2{border:2px solid #47aa4d;border-right:none;position:relative;z-index:2;background:0 0;padding:0 10px 0 20px;color:#fff;background-color:#fff;color:#47aa4d}
 .ecjia-category-nav .category-info .ecjia-category-info-l1:hover .ecjia-category-l2 i{float:right;line-height:34px;display:inline}
 .ecjia-category-nav .category-info .ecjia-category-info-l1:hover .ecjia-category-info-l2{margin-left:-1px;display:block;opacity:1}
-.ecjia-category-nav .category-info .ecjia-category-info-l1:hover .ecjia-category-info-l3{border-bottom:1px solid #e0e0e0;overflow:hidden;white-space:normal;margin-left:30px;margin-right:30px;padding-bottom:10px}
-.ecjia-category-nav .category-info .ecjia-category-info-l1:hover .ecjia-category-info-l3 .over_3{line-height:1.8;padding-left:0;padding-right:30px;font-size:14px}
-.ecjia-category .ecjia-category-l2,.ecjia-category .ecjia-category-l3{color:#888;padding-left:20px;cursor:point}
-.ecjia-category .ecjia-category-l1,.ecjia-category .ecjia-category-l2,.ecjia-category .ecjia-category-l3{position:relative;display:block;height:30px;line-height:30px;color:#fff;background-color:#fff;font-size:14px;padding-right:10px}
+.ecjia-category .ecjia-category-l1,.ecjia-category .ecjia-category-l2{position:relative;display:block;height:30px;line-height:30px;color:#fff;background-color:#fff;font-size:14px;padding-right:10px}
 
 .cate_detail{overflow:hidden;margin-left:20px;margin-top:20px}
 .cate_detail_item{position:relative;min-height:40px}
@@ -301,6 +298,7 @@ a:active,a:hover{text-decoration:none;color:#47aa4d}
 .choose-city-div .close_div{position:absolute;right:20px;top:18px;font-size:18px;cursor:pointer}
 .choose-city-div .guess-position{padding:20px 0;float:left;width:20%;}
 .choose-city-div .content-bottom .position-li, .choose-city-div .content-position .position .position-li{display:inline-block;float:left;margin:0 10px 10px 0;padding:5px 15px;cursor:pointer}
+.choose-city-div .position .position-li-none {display:inline-block;float:left;margin:0 10px 10px 0;padding:5px 15px;}
 .choose-city-div .content-bottom .position-li.active{background-color:#47aa4d;color:#fff;border-radius:40px;cursor:pointer}
 .choose-city-div .content-position {overflow:hidden;}
 .choose-city-div .content-position .position{float:left;width:65%;padding: 20px 0 0;cursor:pointer}
