更新商家管理应用

--- a/content/apps/merchant/statics/mh-css/ecjia.function.css
+++ b/content/apps/merchant/statics/mh-css/ecjia.function.css
@@ -198,7 +198,7 @@ select.w350{width:364px;}
 .m_t_10{position:relative;top:-10px;}
 .m_t_30{margin-top:-30px;}
 
-.m_b0{margin-bottom:0px !important;;}
+.m_b0{margin-bottom:0px !important;}
 .m_b5{margin-bottom:5px;}
 .m_b10{margin-bottom:10px;}
 .m_b15{margin-bottom:15px;}
