--- a/content/apps/wechat/statics/css/wechat_redirect.css
+++ b/content/apps/wechat/statics/css/wechat_redirect.css
@@ -2343,7 +2343,7 @@ padding-right: 3em;
 .bind_btn{
 	width:100%;
 	height: 48px;
-    line-height: 48px;;
+    line-height: 48px;
     text-align: center;
     border-radius: 5px;
 	display: inline-block;
