--- a/content/apps/orders/statics/css/admin_orders.css
+++ b/content/apps/orders/statics/css/admin_orders.css
@@ -183,6 +183,10 @@
 	float: left;
 }
 
+.order-status-base.order-third-base ul li {
+	width: 33.11111%;
+}
+
 .order-status-base .step-no {
 	margin-top: 10px;
 	color: #fff;
