更新ecjia-pc主题模板

--- a/content/themes/ecjia-pc/css/style.css
+++ b/content/themes/ecjia-pc/css/style.css
@@ -252,6 +252,17 @@ a:active,a:hover{text-decoration:none;color:#47aa4d}
 .ecjia-page-footer .hot-city .hot-city-right{float:left;width:85%;text-align:left}
 .ecjia-page-footer .hot-city .hot-city-right li{float:left;font-size:16px;margin-bottom:15px;margin-right:46px;cursor:pointer}
 .ecjia-page-footer .hot-city .hot-city-right li:hover{color:#47aa4d}
+
+.ecjia-page-footer .friend-link{overflow:hidden;margin-top:30px}
+.ecjia-page-footer .friend-link .friend-link-title{width:100%;text-align:left;font-size:18px;color:#1d1515;margin-left:20px;margin-bottom:20px}
+.ecjia-page-footer .friend-link .link-content{margin:10px auto 0 auto;padding:0 20px;overflow:hidden}
+.ecjia-page-footer .friend-link .link-content.m_t0{margin-top:0}
+.ecjia-page-footer .friend-link .friend-link-content li:first-child{margin:0}
+.ecjia-page-footer .friend-link .friend-link-content li:nth-child(9n+1){margin:0}
+.ecjia-page-footer .friend-link .friend-link-content li{float:left;overflow:hidden;width:118px;height:60px;text-align:center;background:#fff;margin-left:10px;line-height:55px;cursor:pointer;margin-bottom:20px;border:1px solid #eee;border-radius:4px}
+.ecjia-page-footer .friend-link .link-content a{color:#08c}
+.ecjia-page-footer .friend-link .link-content a span {line-height: 20px;text-overflow: ellipsis;width: 120px;overflow: hidden;-webkit-line-clamp: 3;-webkit-box-orient: vertical;display: -webkit-inline-box;vertical-align: middle;}
+
 .ecjia-page-footer .helper .mod{float:left;margin-right:-1px;width:25%}
 .ecjia-page-footer .helper .mod .mod-wrap{padding:0 15px;overflow:hidden}
 .ecjia-page-footer .helper .mod .mod-wrap i{background-size:45px 45px;width:50px;height:50px;display:block;background-repeat:no-repeat;background-position:0 -1px;margin:0 auto}
