更新ecjia系统框架

--- a/content/system/statics/styles/ecjia.function.css
+++ b/content/system/statics/styles/ecjia.function.css
@@ -51,7 +51,7 @@
 .ecjiafc-red, .ecjiafc-red:hover, .ecjiafc-red:after, 
 table .fontello-icon-cancel, table .fontello-icon-trash,
 .error_color{color:#c62626;}
-
+.ecjiafc-green{color:#43a24c;}
 .ecjiafc-999, .ecjiafc-999:hover, .ecjiafc-999:after {color:#999;}
 .ecjiafc-blue, .ecjiafc-blue:hover, .ecjiafc-blue:after, .ok_color{color:#08c;}/* #72ACE3 */
 .ecjiafc-white, .ecjiafc-white:hover, .ecjiafc-white:after{color:#fff};
