更新退货退款应用模块

--- a/content/apps/refund/statics/css/admin_payrecord.css
+++ b/content/apps/refund/statics/css/admin_payrecord.css
@@ -117,3 +117,25 @@
     max-width: 100%;
     vertical-align: middle;
 }
+
+.order-money-info{
+	background-color: #F4F4F4;
+    border: 1px solid #F4F4F4;
+    border-radius: 4px;
+    padding: 10px;
+}
+.order-money-info p{
+	margin: 0px;
+	padding:10px;
+}
+
+.ecjiafc-font{
+	font-weight:bold;
+	font-size:18px;
+}
+
+
+.goods-content span {
+    float: right;
+}
+
