--- a/content/apps/refund/statics/css/admin_refund.css
+++ b/content/apps/refund/statics/css/admin_refund.css
@@ -228,8 +228,24 @@
 	margin-top:20px;
 }
 .list-bot label {
-	font-size: 16px;
+	font-size: 13px;
     display: inline-block;
     margin-bottom: 5px;
+}
+
+.order-money-info{
+	background-color: #F4F4F4;
+    border: 1px solid #F4F4F4;
+    border-radius: 4px;
+    padding: 10px;
+}
+.order-money-info p{
+	margin: 0px;
+	padding:10px;
+}
+
+.ecjiafc-font{
+	font-weight:bold;
+	font-size:18px;
 }
 
