--- a/content/apps/refund/statics/css/mh_refund.css
+++ b/content/apps/refund/statics/css/mh_refund.css
@@ -252,3 +252,20 @@ small{
 	font-size: 12px;
 	
 }
+
+
+.order-money-info{
+	background-color: #F4F4F4;
+    border: 1px solid #F4F4F4;
+    border-radius: 4px;
+    padding: 10px;
+}
+.order-money-info p{
+	margin: 0px;
+	padding:10px;
+}
+
+.ecjiafc-font{
+	font-weight:bold;
+	font-size:18px;
+}
